# Breakthrough

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTALL.md  ML.md  README.md  TESTING.md  ai_random.cpp  board_analysis.cpp  build_gui.bat  build_rank.bat  build_tests.bat  build_train.bat  build_web.bat  globals.h  main.cpp  minimax_params.txt  moves.cpp  requirements.txt  smoke_test_gui.ps1  todo.md
Docs/: agents.md  axioms.md  benchmarking.md  terminology.md  theories.md
agents/: champion.txt  champion_params.txt  registry.jsonl  registry.md
analysis/: README.md  analyze.py
boards/: board1.txt  board2.txt  board3.txt  board4.txt  board5.txt  puzzle1.txt  puzzle10.txt  puzzle11.txt  puzzle12.txt  puzzle13.txt  puzzle2.txt  puzzle3.txt  puzzle4.txt  puzzle5.txt  puzzle6.txt  puzzle7.txt  puzzle8.txt  puzzle9.txt
gui/: CLAUDE.md  main_gui.cpp  shell.html
models/: book1.txt  book2.txt  dist_lin.txt  dist_mlp_s1001.txt  dist_mlp_s2002.txt  dist_mlp_wide.txt  lin_policy.txt  lin_value.txt  manifest.json  manifest.md  pst_value.txt  registries.json
plans/: axioms-doc-plan-1-jolly-star.md  axioms-doc-results-1-jolly-star.md  bounded-jitter-plan-1-buzzing-floyd.md  bounded-jitter-results-1-buzzing-floyd.md  chip-count-speedup-plan-1-iterative-raven.md  chip-count-speedup-results-1-iterative-raven.md  depth-dilution-hill-climb-plan-1-models-silly-dragonfly.md  dethrone-champion-plan-1-wiggly-mitten.md  dethrone-champion-results-1-wiggly-mitten.md  dethrone-champion-results-2-wiggly-mitten.md  dethrone-champion-results-3-wiggly-mitten.md  gui-plan-1-streamed-babbage.md  (+25 more)
(+98 files in other folders)
